# finance_script

./: README.md  asset.numbers  pyproject.toml
finance/: assetAllocation.py  pearsonr.py  pearsonr2.py  pearsonr3.py
py_f/: README.md  pyproject.toml
py_f/py_f/: pearsonr.py
