[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["buhe <bugu1986@126.com>"]
readme = "README.md"
packages = [{include = "finance"}]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.43"
scipy="^1.14.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
